--- a/Java Web/src/main/webapp/index.html
+++ b/Java Web/src/main/webapp/index.html
@@ -250,24 +250,18 @@
           </div>
         </div>
       </section>
-
-
-
-
-
-
-
-
-
-
-
-
-    </section>
+	</section>
+	
+	
+	
+	
+	
+	
     <!-- Footer -->
     <section class="container-fluid">
       <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="./home.html" class="nav-link px-2 text-muted">Home</a></li>
+          <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-muted">Home</a></li>
           <li class="nav-item"><a href="./promocoes.html" class="nav-link px-2 text-muted">Promoções</a></li>
           <li class="nav-item"><a href="./destino.html" class="nav-link px-2 text-muted">Destinos</a></li>
           <li class="nav-item"><a href="./contato.html" class="nav-link px-2 text-muted">Contatos</a></li>
